[workspace]
members = ["crates/indexer", "crates/schema", "crates/server"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
dotenvy = "0.15.7"
url = "2.5.7"
async-trait = "0.1.89"
diesel = "2.2.12"
diesel-async = "0.6.1"
diesel_migrations = "2.2.0"

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
