[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
clap = "4.5.45"
dotenvy = "0.15.7"
nostr-sdk = "0.43.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui_types = "0.0.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
