[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
nostr-sdk = "0.43.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json.workspace = true
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui_types = "0.0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
